feat: add random rgb drawing mode

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <button id="newDrawing">New Drawing</button>
+    <div>
+      <button id="newDrawing">New Drawing</button>
+      <button id="modeNormal">Mode: Black color</button>
+      <button id="modeColor">Mode: Random color</button>
+      <button id="modeShade">Mode: Shading</button>
+    </div>
     <div id="container"></div>
   </body>
 </html>
